Add call to action section

--- a/index.html
+++ b/index.html
@@ -65,5 +65,20 @@
         </blockquote>
         <p class="quote-author">-Thor, God of Thunder</p>
     </div>
+    <div class="call-to-action-section">
+        <div class="call-to-action">
+            <div class="call-to-action-container">
+                <h2>Call to action! It's time!</h2>
+                <p class="secondary-text">
+                    Sign up for our product by clicking that button right over there
+                </p>
+            </div>
+            <div class="sign-up-container">
+                <a href="" class="sign-up">
+                    <span class="secondary-text">Sign up</span>
+                </a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
