--- a/index.html
+++ b/index.html
@@ -80,5 +80,8 @@
             </div>
         </div>
     </div>
+    <div class="copyright-section">
+        <h2 class="secondary-text">Copyright © Mark Murphy 2022</h2>
+    </div>
 </body>
 </html>
